# Gigatester

./: .gitignore  README.md  docker-compose.yml  gen_tests.py  gigatester.service  pyproject.toml  requirements.txt  tester.py
chore/: cs.csproj  gigatester.service  gigaweb.service  install_lang_images.sh  link_abs_path.sh  run.sh  run_cpp.sh  run_cpp_int.sh  run_cs.sh  run_cs_int.sh  run_java.sh  run_java_int.sh  run_py.sh  run_py_int.sh  setup.sh  starttester.sh  startweb.sh
containers/: cpp.Dockerfile  cs.Dockerfile  java.Dockerfile  py.Dockerfile
reference/: AGLA2_task1.cpp  AGLA2_task10.cpp  AGLA2_task2.cpp  AGLA2_task3.cpp  AGLA2_task4.cpp  AGLA2_task5.cpp  AGLA2_task6.cpp  AGLA2_task7.cpp  AGLA2_task8.cpp  AGLA2_task9.cpp  DSA_week11A.cpp  DSA_week12A.cpp  DSA_week13A.cpp  DSA_week15A.cpp  DSA_week4A.java  DSA_week5B.cpp  DSA_week6A.cpp  DSA_week7A.cpp  DSA_week8A.cpp  SSAD_assignment2.cpp  SSAD_assignment3.java  SSAD_assignment4.cpp  UniversityCourseManagementSystem.java  week3A.java  week3B.java  week4A.cpp  week4A.java  week5A.cpp
tester/: checkers.py  example.env  exceptions.py  gen_tests.py  generators.py  main.py  requirements.txt  results.py  tasks.py  tester.py  testers.py
tester/generators/: __init__.py  abs_generator.py  agla2.py  dsa.py  example.py  ssad.py
tester/interactive_task/: __init__.py  task.py  (+2 more)
webserver/: Dockerfile  config.json.example  pyproject.toml  requirements.txt  webserver.py
webserver/app/: __init__.py  log.py  main.py  structures.py
webserver/static/: form.css  form.html  form.js  result.html  wait.html  watermelon.tgs
(+8 files in other folders)
