[tool.poetry]
name = "webserver"
version = "0.1.0"
description = ""
authors = ["N"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
annotated-types = "0.6.0"
anyio = "3.7.1"
click = "8.1.7"
fastapi = "0.104.1"
h11 = "0.14.0"
idna = "3.4"
pydantic = "2.5.1"
pydantic-core = "2.14.3"
python-dotenv = "1.0.0"
python-multipart = "0.0.6"
sniffio = "1.3.0"
starlette = "0.27.0"
typing-extensions = "4.8.0"
uvicorn = "0.24.0.post1"
websockets = "12.0"
structlog = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
