[tool.poetry]
name = "webserver"
version = "0.1.0"
description = ""
authors = ["N"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
annotated-types = "^0.6"
anyio = "^3.7"
click = "^8.1"
fastapi = "^0"
h11 = "^0.14"
idna = "3.4"
pydantic = "^2.5"
pydantic-core = "^2.14"
python-dotenv = "^1.0"
python-multipart = "^0.0"
sniffio = "^1.3"
starlette = "^0.40"
typing-extensions = "^4.8"
uvicorn = "^0.24.post1"
websockets = "12.0"
structlog = "^24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
